--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,5 @@
-name: scroll_test
+name: flutter_meitaun_shop
+
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
@@ -43,8 +44,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - bg.jpg
+  #  assets:
+    #  - bg.jpg
     #  - images/a_dot_ham.jpeg
 
     # An image asset can refer to one or more resolution-specific "variants", see
